--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tcc-medidor",
   "version": "1.0.0",
   "scripts": {
-    "start": "node app"
+    "start": "pm2 kill && pm2 start app.js --watch --no-daemon"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -11,6 +11,7 @@
     "jade": "1.11.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "mongoose": "^5.12.15"
+    "mongoose": "^5.12.15",
+    "pm2": "^5.1.2"
   }
 }
